--- a/generators/spring-data-elasticsearch/templates/src/main/java/_package_/config/ElasticsearchReindexer.java.ejs
+++ b/generators/spring-data-elasticsearch/templates/src/main/java/_package_/config/ElasticsearchReindexer.java.ejs
@@ -1,4 +1,4 @@
-package tech.jhipster.sample.config;
+package <%- packageName %>.config;
 
 import jakarta.persistence.EntityManager;
 import org.slf4j.Logger;
