remove uneeded exception handling

--- a/generators/spring-data-elasticsearch/templates/src/main/java/_package_/config/ElasticsearchReindexer.java.ejs
+++ b/generators/spring-data-elasticsearch/templates/src/main/java/_package_/config/ElasticsearchReindexer.java.ejs
@@ -29,17 +29,13 @@ public class ElasticsearchReindexer implements ApplicationListener<ContextRefres
         }
         log.info("Checking Elasticsearch indexes");
         var applicationContext = event.getApplicationContext();
-        try {
-            for (EsEntity entity : EsEntity.values()) {
-                reindex(applicationContext, entity);
-            }
-        } catch (ClassNotFoundException e) {
-            throw new RuntimeException(e);
+        for (EsEntity entity : EsEntity.values()) {
+            reindex(applicationContext, entity);
         }
     }
 
     @SuppressWarnings({ "unchecked", "rawtypes" })
-    private void reindex(ApplicationContext applicationContext, EsEntity entity) throws ClassNotFoundException {
+    private void reindex(ApplicationContext applicationContext, EsEntity entity) {
         if (entity == EsEntity.ReindexerPlaceEndHolder) {
             return;
         }
